# csgo-horker

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  update.sh
cmake/modules/: FindNVCtrlLib.cmake
src/: CMakeLists.txt  config.cpp  config.h  defines.h.in  engine.cpp  engine.h  globals.h  helper.cpp  helper.h  hwctrl.cpp  hwctrl.h  main.cpp  memorymanager.cpp  memorymanager.h  offsets.cpp  offsets.h  patterns.h  process.cpp  process.h
src/features/: faim.cpp  faim.h  fbase.cpp  fbase.h  fglow.cpp  fglow.h  fvisual.cpp  fvisual.h
src/interfaces/: ibase.h  iclient.cpp  iclient.h  iengine.cpp  iengine.h
src/sdk/: basetypes.h  cbaseentity.cpp  cbaseentity.h  centitylist.cpp  centitylist.h  cglowobjectmanager.h  cutlmemory.h  cutlvector.h  entity.h  mathlib.h  types.h  vector.h  vector2d.h
src/utils/: hmath.h
